课程列表UI，课程详情UI

--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -6,8 +6,9 @@
  Copyright © 2016年 macmini. All rights reserved.
  */
 
-
-
 "Title.OnlineSchool.Calendar"       = "My timetable";
-"Title.OnlineSchool.Mine"       = "Mine";
+"Title.OnlineSchool.Mine"           = "Mine";
+
+"ClassDayList.Title"            = "Timetable";
+"ClassDetail.Title"             = "Review Timetable";
 
