--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
@@ -6,6 +6,9 @@
  Copyright © 2016年 macmini. All rights reserved.
  */
 
-
 "Title.OnlineSchool.Calendar"       = "我的课表";
-"Title.OnlineSchool.Mine"       = "我的";
+"Title.OnlineSchool.Mine"           = "我的";
+
+
+"ClassDayList.Title"            = "課表";
+"ClassDetail.Title"             = "查看课表";
