--- a/YSLib/BMKit/BMKitResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/BMKit/BMKitResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -13,3 +13,9 @@
 "ToolBar.Next" = "下一个";
 "ToolBar.Delete" = "删除";
 "ToolBar.Edit" = "编辑";
+
+"EmptyView.NoData" = "该页面空空如也...";
+"EmptyView.NetworkError" = "网络链接暂时失败...";
+"EmptyView.OtherError" = "抱歉，页面出现问题了";
+"EmptyView.FreshText" = "轻点屏幕即可刷新重试";
+"EmptyView.ButtonText" = "点击重试";
