--- a/YSLib/BMKit/BMKitResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/BMKit/BMKitResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -19,3 +19,13 @@
 "EmptyView.OtherError" = "抱歉，頁面出現問題了";
 "EmptyView.FreshText" = "輕點荧幕即可重繪重試";
 "EmptyView.ButtonText" = "點擊重試";
+
+"Fresh.Default.NormalHeaderText" = "下拉可以刷新";
+"Fresh.Default.WillLoadHeaderText" = "鬆開立即刷新";
+"Fresh.Default.LoadingHeaderText" = "正在刷新數據中...";
+
+"Fresh.Default.NormalFooterText" = "上拉可以加載更多";
+"Fresh.Default.AutoNormalFooterText" = "上拉或點擊可以加載更多";
+"Fresh.Default.WilllLoadFooterText" = "鬆開立即加載更多";
+"Fresh.Default.LoadingFooterText" = "正在加載更多的數據...";
+"Fresh.Default.NoMoredataFooterText" = "已經全部加載完畢";
