--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
@@ -18,6 +18,11 @@
 "Prompt.OnlineSchool.oldPassword"    = "请输入原密码";
 "Prompt.OnlineSchool.changePassword" = "请输入6-20位新密码";
 "Prompt.OnlineSchool.againPassword"  = "再次输入新密码";
+"Prompt.NoDomain"  = "没有输入机构域名";
+"Prompt.NoAccount"  = "没有输入账号";
+"Prompt.NoPassword"  = "没有输入密码";
+"Prompt.OK" = "确定";
+
 
 "ClassDayList.Title"            = "课表";
 "ClassDetail.Title"             = "查看课表";
@@ -32,3 +37,13 @@
 "ClassMediumCell.Title"         = "课程回放";
 "ClassReplayView.Duration"      = "时长";
 "ClassReplayView.Size"          = "大小";
+
+
+"Label.onlineSchoolPlaceholder" = "请输入机构域名";
+"Label.accountNumberPlaceholder" = "请输入您的账号";
+"Label.onlineSchoolSystem" = "网校系统";
+
+"Login.Enter" = "登录";
+"Login.EnterRoom" = "进入房间";
+
+"Error.ServerError" = "服务器访问异常";
