--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -23,7 +23,8 @@
 "Prompt.NoPassword"  = "沒有輸入密碼";
 "Prompt.OK" = "確定";
 
-
+"Button.ReturnRoom" = "返回直播";
+"Button.onlineschool" = "登入網校";
 
 "ClassDayList.Title"            = "課表";
 "ClassDetail.Title"             = "查看課表";
@@ -39,12 +40,9 @@
 "ClassReplayView.Duration"      = "時長";
 "ClassReplayView.Size"          = "大小";
 
-
-
 "Label.onlineSchoolPlaceholder" = "請輸入機构域名";
 "Label.accountNumberPlaceholder" = "請輸入您的帳號";
 "Label.onlineSchoolSystem" = "網校系統";
-
 
 "Login.Enter" = "登入";
 "Login.EnterRoom" = "進入房間";
