请求错误提示 退出登录弹框

--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -22,6 +22,7 @@
 "Prompt.NoAccount"  = "No account number entered";
 "Prompt.NoPassword"  = "No password entered";
 "Prompt.OK" = "OK";
+"Prompt.Cancel" = "Cancel";
 
 "Button.ReturnRoom" = "Return to live";
 "Button.onlineschool" = "Login online school";
