--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -22,6 +22,7 @@
 "Prompt.NoAccount"  = "沒有輸入帳號";
 "Prompt.NoPassword"  = "沒有輸入密碼";
 "Prompt.OK" = "確定";
+"Prompt.Cancel" = "取消";
 
 "Button.ReturnRoom" = "返回直播";
 "Button.onlineschool" = "登入網校";
