--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
@@ -29,6 +29,7 @@
 "ClassDayList.Title"            = "课表";
 "ClassDetail.Title"             = "查看课表";
 "ClassListCell.Enter"           = "进 入";
+"ClassListCell.RePlay"          = "回 放";
 "ClassListCell.State.Waiting"   = "未开始";
 "ClassListCell.State.Begin"     = "进行中";
 "ClassListCell.State.End"       = "已结束";
