--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -29,6 +29,7 @@
 "ClassDayList.Title"            = "課表";
 "ClassDetail.Title"             = "查看課表";
 "ClassListCell.Enter"           = "進 入";
+"ClassListCell.RePlay"          = "重 播";
 "ClassListCell.State.Waiting"   = "未開始";
 "ClassListCell.State.Begin"     = "進行中";
 "ClassListCell.State.End"       = "已結束";
