--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -157,6 +157,7 @@
 "Alert.UpdateMessage" = "有新版本啦,建议下载安装,升级到最新版本,体验在线实时互动。";
 "Alert.UpdateNow" = "现在升级";
 "Alert.UpdateAfter" = "稍后再说";
+"Alert.CheckNetMessage" = "请连接网络";
 
 "Action.EnterRoom"          = "加入房间!";
 "Action.ExitRoom"           = "离开房间!";
@@ -392,4 +393,5 @@
 
 "Role.Host" = "主持人";
 "Role.Attendee" = "参会者";
+
 
