--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -30,6 +30,8 @@
 "ClassDayList.Title"            = "Schedule";
 "ClassDetail.Title"             = "Review Schedule";
 "ClassListCell.Enter"           = "Enter";
+"ClassListCell.Enter.WaitError" = "You can enter the classroom ten minutes before the class starts, please wait patiently.";
+"ClassListCell.Enter.EndError"  = "This class is over.\nYou can click on the course playback to view the class record.";
 "ClassListCell.RePlay"          = "RePlay";
 "ClassListCell.State.Waiting"   = "Wait";
 "ClassListCell.State.Begin"     = "Begin";
