--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -30,6 +30,8 @@
 "ClassDayList.Title"            = "課表";
 "ClassDetail.Title"             = "查看課表";
 "ClassListCell.Enter"           = "進 入";
+"ClassListCell.Enter.WaitError" = "開課前十分鐘可以進入教室\n請耐心等待";
+"ClassListCell.Enter.EndError"  = "本課堂已結束\n您可以點擊課程回放\n查看本課堂記錄";
 "ClassListCell.RePlay"          = "重 播";
 "ClassListCell.State.Waiting"   = "未開始";
 "ClassListCell.State.Begin"     = "進行中";
