tab关闭右滑手势返回 关闭Hub出现动画

--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 "Title.OnlineSchool.Calendar"       = "My timetable";
 "Title.OnlineSchool.Mine"           = "Personal center";
 "Title.OnlineSchool.ModifyPassWord" = "Modify password";
-"Title.OnlineSchool.SignOut"        = "Sign Out";
+"Title.OnlineSchool.SignOut"        = "Sign out";
 "Title.OnlineSchool.Submit"         = "Submit";
 "Title.OnlineSchool.OriginalPassword"    = "Original password";
 "Title.OnlineSchool.changePassword" = "New password";
