网校域名校验，登录按键可用问题

--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -55,3 +55,4 @@
 "Login.EnterRoom" = "Enter room";
 
 "Error.ServerError" = "Server access exception";
+"Error.DomainError" = "Domain input error";
