--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -30,7 +30,7 @@
 "ClassDayList.Title"            = "課表";
 "ClassDetail.Title"             = "查看課表";
 "ClassListCell.Enter"           = "進 入";
-"ClassListCell.Enter.WaitError" = "開課前十分鐘可以進入教室\n請耐心等待";
+"ClassListCell.Enter.WaitError" = "開課前壹小時可以進入教室\n請耐心等待";
 "ClassListCell.Enter.EndError"  = "本課堂已結束\n您可以點擊課程回放\n查看本課堂記錄";
 "ClassListCell.Enter.SysError"  = "系統繁忙，請稍後再試";
 "ClassListCell.Enter.TeacherError"  = "請等待老師進入教室";
