--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -33,7 +33,7 @@
 "ClassListCell.Enter.WaitError" = "You can enter the classroom one hour before the class starts, please wait patiently.";
 "ClassListCell.Enter.EndError"  = "This class is over.\nYou can click on the course playback to view the class record.";
 "ClassListCell.Enter.SysError"  = "The system is busy, please try again later.";
-"ClassListCell.Enter.TeacherError"  = "Please wait for the teacher to enter the classroom.";
+"ClassListCell.Enter.TeacherError"  = "Room not ready,Rplease wait.";
 "ClassListCell.RePlay"          = "RePlay";
 "ClassListCell.State.Waiting"   = "Wait";
 "ClassListCell.State.Begin"     = "Begin";
