--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -32,8 +32,8 @@
 "ClassListCell.Enter"           = "Enter";
 "ClassListCell.Enter.WaitError" = "You can enter the classroom one hour before the class starts, please wait patiently.";
 "ClassListCell.Enter.EndError"  = "This class is over.\nYou can click on the course playback to view the class record.";
-"ClassListCell.Enter.SysError"  = "The system is busy, please try again later.";
-"ClassListCell.Enter.TeacherError"  = "Room not ready,Rplease wait.";
+"ClassListCell.Enter.SysError"  = "Room not ready, please wait.";
+"ClassListCell.Enter.TeacherError"  = "Please wait for teacher.";
 "ClassListCell.RePlay"          = "RePlay";
 "ClassListCell.State.Waiting"   = "Wait";
 "ClassListCell.State.Begin"     = "Begin";
