--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -52,7 +52,7 @@
 "Label.onlineSchoolSystem" = "Network school system";
 
 "Login.Enter" = "Enter";
-"Login.EnterRoom" = "Enter room";
+"Login.EnterRoom" = "Enter classroom";
 
 "Error.ServerError" = "Server access exception";
 "Error.DomainError" = "Domain input error";
