--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -37,7 +37,7 @@
 "Prompt.prompt" = "提示";
 "Prompt.kick" = "請您三分鐘以後進入房間";
 "Prompt.stuHasKicked" = "您已被請出房間，請三分鐘之後再進入房間!";
-"Prompt.inputPwd" = "請輸入密碼";
+"Prompt.inputPwd" = "請輸入課堂登入碼";
 "Prompt.OK" = "確定";
 "Prompt.Cancel" = "取消";
 "Prompt.Know" = "知道啦";
@@ -50,7 +50,7 @@
 
 //login
 "Login.Enter" = "登入";
-"Login.EnterRoom" = "進入房間";
+"Login.EnterRoom" = "進入課堂";
 "Login.RoomIdPlaceHolder"    = "房間號";
 "Login.nickName"  = "昵稱";
 "Login.Role"      = "角色";
@@ -259,8 +259,8 @@
 
 "Label.choiceIdentity" = "選擇身份";
 "Label.roomid" = "房間號";
-"Label.roomPlaceholder" = "請輸入您的房間號";
-"Label.nicknamePlaceholder" = "請輸入您的昵稱";
+"Label.roomPlaceholder" = "請輸入課堂編號";
+"Label.nicknamePlaceholder" = "請輸入昵稱";
 "Label.messageBoard" = "留言板";
 
 "Menu.Copy" = "復制";
