学生抢答器

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -279,6 +279,8 @@
 "Res.lab.iget"  = "winning";
 "Res.lab.noget"   = "no rushes";
 "Res.lab.getting" = "rushing";
+"Res.lab.get" = "get";
+
 
 "netstate.excellent" = "excellent";
 "netstate.medium" = "medium";
