--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -281,6 +281,9 @@
 "Res.lab.getting"="搶答中…";
 "Res.lab.get" = "搶答";
 
+"Timer.btn.start" = "開始計時";
+"Timer.lab.end" = "計時結束";
+
 "netstate.excellent" = "優";
 "netstate.medium" = "中";
 "netstate.bad" = "差";
