--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
@@ -56,3 +56,7 @@
 
 "Error.ServerError" = "服务器访问异常";
 "Error.DomainError" = "域名输入错误";
+"Error.NewPwdEmpty" = "新密码不能为空";
+"Error.ConfirmPwdRmpty" = "确认密码不能为空";
+"Error.PwdFormat" = "密码格式错误";
+"Error.PwdLength" = "新密码和确认密码的不一致";
