--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -281,6 +281,8 @@
 "Res.lab.getting"="搶答中…";
 "Res.lab.get" = "搶答";
 
+"Res.lab.success" = "搶答成功";
+"Res.lab.fail" = "無人搶答";
 "Timer.btn.start" = "開始計時";
 "Timer.lab.end" = "計時結束";
 
