--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
@@ -52,7 +52,7 @@
 "Label.onlineSchoolSystem" = "网校系统";
 
 "Login.Enter" = "登录";
-"Login.EnterRoom" = "进入房间";
+"Login.EnterRoom" = "加入房间";
 
 "Error.ServerError" = "服务器访问异常";
 "Error.DomainError" = "域名输入错误";
