解决举手列表崩溃的bug，完善了低性能设备上的性能展示

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -404,3 +404,4 @@
 
 "Prompt.RaiseHand_classBegain" = "Hands up after class";
 
+"Prompt.LowDeviceTitle" = "Device not  well enough to display more";
