--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -405,3 +405,4 @@
 "Prompt.RaiseHand_classBegain" = "Hands up after class";
 
 "Prompt.LowDeviceTitle" = "Device not  well enough to display more";
+"Prompt.NoCamera" = "Camera is banned";
