学生抢答中文案修改

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -282,6 +282,8 @@
 "Res.lab.get" = "get";
 "Res.lab.success" = "Get chance";
 "Res.lab.fail" = "No answer";
+"Res.lab.studenting" = "wait..";
+
 "Timer.btn.start" = "Start";
 "Timer.lab.end" = "Timer end";
 
