--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -408,3 +408,4 @@
 
 "Prompt.LowDeviceTitle" = "Device not  well enough to display more";
 "Prompt.NoCamera" = "Camera is banned";
+"Prompt.NoMicrophone" = "No Mic";
