上一版本遗留2：到了下课时间，学生不应该有即将下课的提示

--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -163,6 +163,7 @@
 "Action.EnterRoom"          = "加入房间!";
 "Action.ExitRoom"           = "离开房间!";
 
+
 "Prompt.EndClass1M"         = "距离下课还剩1分钟，请合理安排时间哦~";
 "Prompt.RoomToBeClosed"     = "房间即将关闭。";
 "Prompt.ClassToBegin"       = "距离上课时间还有1分钟，请做好准备。";
@@ -194,8 +195,10 @@
 "Prompt.ClassEndTime"      = "分钟后课堂结束，请合理安排时间哦";
 "Prompt.ClassEndTimeseconds"= "秒后课堂结束，请合理安排时间哦";
 
-"Prompt.Appointment30"           = "房间预约时间已到，30分钟后将关闭!";
-"Prompt.Appointment28"           = "房间预约时间已到，2分钟后将关闭!";
+"Prompt.Appointment_end"           = "老师您好，下课时间已到，请您及时结束课程!";
+"Prompt.AppointmentN"           = "房间预约时间已到，%ld分钟后将关闭教室!";
+"Prompt.Appointment30"           = "房间预约时间已到，30分钟后将关闭教室!";
+"Prompt.Appointment28"           = "房间预约时间已到，2分钟后将关闭教室!";
 //"Prompt.TeacherLeave8"           = "老师退出房间达到8分钟，2分钟后房间即将关闭!";
 "Prompt.ClassEndAppointment30"           = "已超预约时间30分钟，系统结束本次互动";
 "Prompt.ClassEndTeacherLeave10"          = "老师已离开房间10分钟，系统结束本次互动";
