--- a/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -193,6 +193,8 @@
 "Prompt.ClassEndTime" = "分鐘後課堂結束，請合理安排時間哦";
 "Prompt.ClassEndTimeseconds"= "秒後課堂結束，請合理安排時間哦";
 
+"Prompt.Appointment_end"           = "老師您好，下課時間已到，請您及時結束課程!";
+"Prompt.AppointmentN"           = "房間預約時間已到，%ld分鐘后将关闭後將關閉!";
 "Prompt.Appointment30"           = "房間預約時間已到，30分鐘后将关闭後將關閉!";
 "Prompt.Appointment2"           = "房間預約時間已到，2分鐘后将关闭後將關閉!";
 //"Prompt.TeacherLeave8"           = "老師退出房間達到8分鐘，2分鐘後房間即將關閉!";
